Edits to distributions.

--- a/03-discriptive.Rmd
+++ b/03-discriptive.Rmd
@@ -51,8 +51,6 @@ Mean                `mean()`      **base**
 
 Median              `median()`    **base**
 
-Central moment      `moment()`    **e1071**
-
 Skewness            `skewness()`  **e1071**
 
 Kurtosis            `kurtosis()`  **e1071**
@@ -113,7 +111,7 @@ chicks %>%
 
 The mean is quite sensitive to the presence of outliers or extreme values in the data, and it is advised that its use be reserved for normally distributed data from which the extremes/outliers have been removed. When extreme values are indeed part of our data and not simply 'noise,' then we have to resort to a different measure of central tendency: the median.
 
-> **Question:** In statistics, what do we mean with 'noise'?
+> *Task:** In statistics, what do we mean with 'noise'?
 
 ### The median
 
@@ -128,13 +126,16 @@ chicks %>%
 
 The median is therefore the value that separates the lower half of the sample data from the upper half. In normally distributed continuous data the median is equal to the mean. Comparable concepts to the median are the *1st* and *3rd quartiles*, which, respectively, separate the first quarter of the data from the last quarter---see later. The advantage of the median over the mean is that it is unaffected (i.e. not skewed) by extreme values or outliers, and it gives an idea of the typical value of the sample. The median is also used to provide a robust description of non-parametric data (see Chapter 4 for a discussion on normal data and other data distributions).
 
-### Central moment
-
-<!-- AJS to update -->
-
 ### Skewness
 
-<!-- AJS to update -->
+Skewness is a measure of symmetry, and it is best understood by understanding the location of the median relative to the mean. A negative skewness indicates that the mean of the data is less than their median---the data distribution is left-skewed. A positive skewness results from data that have a mean that is larger than their median; these data have a right-skewed distribution.
+
+```{r}
+library(e1071)
+skewness(faithful$eruptions)
+```
+
+> **Task:**
 
 ### Kurtosis
 
